# prism

./: .gitignore  API.md  CLAUDE.md  CONFIGURATION.md  CONFIG_REFERENCE.md  Cargo.toml  GRUG_COMPLEXITY_REPORT.md  JULES_SETU_PLAN.md  README.md  flake.nix
.github/workflows/: release.yml  test.yml
docs/: ARCHITECTURE.md  oauth-token-management.md
scripts/: release.sh
src/: error.rs  lib.rs  main.rs  retry.rs
src/auth/: anthropic.rs  common.rs  google.rs  mod.rs  openai.rs
src/commands/: auth.rs  mod.rs  run.rs
src/config/: mod.rs  models.rs
src/process/: mod.rs
src/router/: composite.rs  factory.rs  mod.rs  model.rs  model_router.rs  name_based.rs  provider.rs  traits.rs
src/server/: error_handling.rs  mod.rs  parameter_mapping.rs  routes.rs
src/server/providers/: anthropic.rs  auth.rs  gemini.rs  mod.rs  openai.rs  openrouter.rs  parsing.rs
tests/: background_task_tests.rs  config_tests.rs  edge_case_tests.rs  gemini_endpoint_tests.rs  oauth_tests.rs  parser_tests.rs  startup_validation_tests.rs
