[package]
name = "setu"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP server
axum = { version = "0.8", features = ["json", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
directories = "5.0"

# Error handling and retries
thiserror = "2.0"
backon = "1.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# OAuth dependencies
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ai-ox integration (path dependency to workspace crates)
ai-ox = { path = "../ai-ox/crates/ai-ox", features = ["anthropic", "gemini"] }
anthropic-ox = { path = "../ai-ox/crates/anthropic-ox" }
gemini-ox = { path = "../ai-ox/crates/gemini-ox" }
openrouter-ox = { path = "../ai-ox/crates/openrouter-ox" }
conversion-ox = { path = "../ai-ox/crates/conversion-ox", features = ["anthropic-gemini", "anthropic-openrouter"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
