[package]
name = "setu"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP server
axum = { version = "0.8", features = ["json", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
directories = "5.0"

# Error handling and retries
thiserror = "2.0"
backon = "1.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# Fast HashMap
rustc-hash = "2.0"

# OAuth dependencies
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9.3"

# ai-ox subcrates (GitHub dependency with test fixes) - using only the subcrates we actually need
anthropic-ox = { git = "https://github.com/ribelo/ai-ox.git", rev = "04bcaac77d6ddac9c16fed83ea036693a261056d" }
gemini-ox = { git = "https://github.com/ribelo/ai-ox.git", rev = "04bcaac77d6ddac9c16fed83ea036693a261056d" }
openrouter-ox = { git = "https://github.com/ribelo/ai-ox.git", rev = "04bcaac77d6ddac9c16fed83ea036693a261056d" }
openai-ox = { git = "https://github.com/ribelo/ai-ox.git", rev = "04bcaac77d6ddac9c16fed83ea036693a261056d" }
ai-ox-common = { git = "https://github.com/ribelo/ai-ox.git", rev = "04bcaac77d6ddac9c16fed83ea036693a261056d" }
conversion-ox = { git = "https://github.com/ribelo/ai-ox.git", rev = "04bcaac77d6ddac9c16fed83ea036693a261056d", features = ["anthropic-gemini", "anthropic-openrouter"] }

[profile.release]
opt-level = "z"         # Optimize for size
lto = "fat"             # Full Link Time Optimization (slower build but smaller binary)
codegen-units = 1       # Compile crates one after another for better optimization
strip = true            # Strip symbols from binary
panic = "abort"         # Smaller panic handler
debug = false           # No debug info
overflow-checks = false # Disable overflow checks in release

[profile.release-small]
inherits = "release"
opt-level = "s"         # Different size optimization (sometimes smaller than "z")

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
httpmock = "0.7"
